--- a/src/app/mission/components/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/components/mission-details-view/mission-details-view.component.html
@@ -7,24 +7,24 @@
         <h3 mat-subheader>Informasjon</h3>
         <mat-list-item>
           <mat-icon mat-list-icon>phone</mat-icon>
-          <a mat-line href="tel:{{ missionDetails.mission.phoneNumber }}">{{ missionDetails.mission.phoneNumber || 'Ingen telefonnummer' }}</a>
-          <p mat-line *ngIf="missionDetails.mission.phoneNumber">Trykk for å ringe </p>
+          <a mat-line href="tel:{{ mission.phoneNumber }}">{{ mission.phoneNumber || 'Ingen telefonnummer' }}</a>
+          <p mat-line *ngIf="mission.phoneNumber">Trykk for å ringe </p>
           <mat-icon>open_in_new</mat-icon>
           <mat-divider [inset]="true"></mat-divider>
         </mat-list-item>
 
-        <mat-list-item *ngIf="missionDetails.mission.address">
+        <mat-list-item *ngIf="mission.address">
           <mat-icon mat-list-icon>directions_car</mat-icon>
-          <a mat-line href="https://www.google.com/maps/dir/?api=1&destination={{ missionDetails.mission.address }}&travelmode=driving" target="_blank">Veibeskrivelse</a>
+          <a mat-line href="https://www.google.com/maps/dir/?api=1&destination={{ mission.address }}&travelmode=driving" target="_blank">Veibeskrivelse</a>
           <p mat-line>Trykk for å åpne kart</p>
           <mat-icon >open_in_new</mat-icon>
         </mat-list-item>
         <mat-divider></mat-divider>
 
-        <h3 mat-subheader *ngIf="missionDetails.missionReports && missionDetails.missionReports.length != 0">Rapporter</h3>
-        <mat-list-item *ngFor="let report of missionDetails.missionReports; last as last">
+        <h3 mat-subheader *ngIf="reports && reports.length != 0">Rapporter</h3>
+        <mat-list-item *ngFor="let report of reports; last as last">
           <mat-icon mat-list-icon>description</mat-icon>
-          <a mat-line href="{{ report.fileURL }}">{{ report.missionReportType.name }}</a>
+          <a mat-line href="{{ report.fileURL }}">{{ report.missionReportType?.name }}</a>
           <p mat-line>{{ report.createdAt | date }}</p>
           <mat-icon class="color-green">cloud_download</mat-icon>
           <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
@@ -37,7 +37,7 @@
 
   <mat-tab label="Bilder">
     <div class="image-container">
-      <app-image-list [images]="missionDetails.missionImages" (imageDeleted)="this.imageDeleted.emit($event)"></app-image-list>
+      <app-image-list [images]="images" (imageDeleted)="this.imageDeleted.emit($event)"></app-image-list>
     </div>
 
   </mat-tab>
@@ -45,11 +45,10 @@
   <mat-tab label="Notater">
     <div class="card-container">
       <app-mission-note-list
-        [missionId]="missionDetails.mission.id"
-        [notes]="missionDetails.missionNotes"
-        (loadNoteDetails)="loadNoteDetails.emit($event)"
-        (deleteNote)="deleteNote.emit($event)"
-        (editNote)="editNote.emit($event)">
+        [missionId]="mission.id"
+        [notes]="notes"
+        (noteDeleted)="noteDeleted.emit($event)"
+        (noteEdit)="noteEdit.emit($event)">
       </app-mission-note-list>
     </div>
   </mat-tab>
