--- a/src/app/mission/components/mission-note-form-view/mission-note-form-view.component.html
+++ b/src/app/mission/components/mission-note-form-view/mission-note-form-view.component.html
@@ -26,7 +26,12 @@
    <br />
    <mat-checkbox formControlName="pinned">Viktig?</mat-checkbox>
    <br />
-   <button (click)="onSubmit()" [disabled]="this.noteForm.invalid" mat-raised-button color="primary">Lagre</button>
+
+   <app-submit-button
+    [disabled]="noteForm.invalid || noteForm.pristine"
+    (click)="onSubmit()">
+   </app-submit-button>
+
 
  </form>
 
