--- a/src/app/mission/mission-details/mission-details.component.html
+++ b/src/app/mission/mission-details/mission-details.component.html
@@ -4,7 +4,7 @@
   (backEvent)="onBack()">
 
   <app-mission-details-view
-    [mission]="(mission$ | async)"
+    [mission]="mission"
     [images]="(images$ | async)"
     [reports]="(reports$ | async)"
     [notes]="(notes$ | async)"
