--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -1,24 +1,27 @@
 <span class="content-header">Endre passord</span>
 <form *ngIf="passwordForm" [formGroup]="passwordForm" class="app-form" fxLayout="column">
+  <mat-form-field>
+      <input matInput placeholder="Nåværende passord"  type="password" formControlName="oldPassword">
+  </mat-form-field>
 
-<mat-form-field>
-    <input matInput placeholder="Nåværende passord"  type="password" formControlName="oldPassword">
-</mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Nytt passord"  type="password" formControlName="password">
+    <mat-error *ngIf="this.password.invalid">
+      Passord må være på minst 7 tegn.
+    </mat-error>
+  </mat-form-field>
 
-<mat-form-field>
-  <input matInput placeholder="Nytt passord"  type="password" formControlName="password">
-  <mat-error *ngIf="this.password.invalid">
-    Passord må være på minst 7 tegn.
+  <mat-form-field>
+    <input matInput placeholder="Gjenta nytt passord"  type="password" formControlName="confirmPassword">
+  </mat-form-field>
+  <mat-error *ngIf="this.error">
+    {{ this.error }}
   </mat-error>
-</mat-form-field>
+  <br />
 
-<mat-form-field>
-  <input matInput placeholder="Gjenta nytt passord"  type="password" formControlName="confirmPassword">
-</mat-form-field>
-<mat-error *ngIf="this.error">
-  {{ this.error }}
-</mat-error>
-<br />
-<button (click)="onSubmit()" [disabled]="this.passwordForm.invalid" mat-raised-button color="primary">Lagre</button>
+  <app-submit-button
+    [disabled]="passwordForm.invalid"
+    (click)="onSubmit()"
+  ></app-submit-button>
 
 </form>
