--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,7 @@
 
     <div class="static-page-content" fxFlex="80">
       <p *ngIf="!newestMissions"><em>Laster inn oppdrag...</em></p>
-      <app-mission-list-view [missions]="newestMissions"></app-mission-list-view>
+      <app-mission-list-view [missions]="missionHistory$ | async"></app-mission-list-view>
     </div>
 
   </div>
