--- a/src/app/mission/components/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/components/mission-details-view/mission-details-view.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group mat-stretch-tabs>
+<mat-tab-group mat-stretch-tabs *ngIf="mission">
 
   <mat-tab label="Generelt">
     <div class="card-container">
@@ -64,3 +64,4 @@
 </button>
 
 <input type="file" style="display:none" multiple (change)="this.imagesUploaded.emit($event.target.files)" #imageInput>
+
