--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -4,13 +4,20 @@
 
     <mat-tab label="Profil">
       <div class="card-container">
-        <app-profile-form *ngIf="user" [user]="user" (profileUpdated)="updateProfile($event)"></app-profile-form>
+        <app-profile-form
+          *ngIf="user"
+          [user]="user"
+          (profileUpdated)="updateProfile($event)">
+      </app-profile-form>
       </div>
     </mat-tab>
 
     <mat-tab label="Passord">
       <div class="card-container">
-        <app-password-form [error]="passwordStatus" (passwordUpdated)="updatePassword($event)"></app-password-form>
+        <app-password-form
+          [error]="passwordStatus"
+          (passwordUpdated)="updatePassword($event)">
+      </app-password-form>
       </div>
     </mat-tab>
 
