refactoring services, add data management,  fix ios bug

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,6 +24,13 @@
         <mat-icon mat-list-icon>people</mat-icon>
         <span mat-line>Brukere</span>
         <mat-icon>chevron_right</mat-icon>
+        <mat-divider class="mid-divider"></mat-divider>
+      </mat-list-item>
+
+      <mat-list-item [routerLink]="['/data']">
+        <mat-icon mat-list-icon>dns</mat-icon>
+        <span mat-line>Administrer data</span>
+        <mat-icon>chevron_right</mat-icon>
       </mat-list-item>
     </mat-nav-list>
 
