--- a/src/app/mission/components/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/components/mission-details-view/mission-details-view.component.html
@@ -1,9 +1,7 @@
 <mat-tab-group mat-stretch-tabs *ngIf="mission">
-
   <mat-tab label="Generelt">
     <div class="card-container">
       <mat-nav-list class="p-0">
-
         <h3 mat-subheader>Informasjon</h3>
         <mat-list-item>
           <mat-icon mat-list-icon>phone</mat-icon>
@@ -36,7 +34,7 @@
   </mat-tab>
 
   <mat-tab label="Bilder">
-    <div class="image-container">
+    <div class="card-container">
       <app-image-list [images]="images" (imageDeleted)="this.imageDeleted.emit($event)"></app-image-list>
     </div>
 
