--- a/src/app/mission/components/mission-details-view/mission-details-view.component.scss
+++ b/src/app/mission/components/mission-details-view/mission-details-view.component.scss
@@ -7,3 +7,10 @@
   height:100%;
 }
 
+::ng-deep .mat-tab-body-wrapper{
+  margin:0!important;
+  position:sticky!important;
+  overflow:auto!important;
+  height:calc(100vh - ((#{$bottom-nav-height} + #{$alt-nav-height} + #{$tab-header-height} + 1) * 1px))!important;
+}
+
