--- a/src/app/shared/layout/bottom-nav/bottom-nav.component.scss
+++ b/src/app/shared/layout/bottom-nav/bottom-nav.component.scss
@@ -3,13 +3,14 @@
 .bottom_toolbar{
     position:fixed;
     bottom:0px;
+    right:0px;
     height:$bottom-nav-height * 1px !important;
     background:$bg-app-bar;
     z-index:100;
 }
 
 .bottom_toolbar_no_side{
-  width:calc(100vw - ($sidenav-width * 1px) - 1px)
+  width:calc(100vw - (#{$sidenav-width} * 1px))
 }
 
 .bottom_toolbar_button{
@@ -20,3 +21,4 @@
     justify-content:center;
     color:#fff;
 }
+
