--- a/src/app/mission/mission-details/mission-details.component.html
+++ b/src/app/mission/mission-details/mission-details.component.html
@@ -12,7 +12,8 @@
     (imagesUploaded)="uploadImages($event)"
     (imageDeleted)="deleteImage($event)"
     (noteDeleted)="deleteNote($event)"
-    (noteEdit)="editNote($event)">
+    (noteEdit)="editNote($event)"
+    (reportDeleted)="deleteReport($event)">
   </app-mission-details-view>
 
 </app-main-nav>
