--- a/src/app/shared/layout/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/layout/bottom-nav/bottom-nav.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="bottom_toolbar p-0" [ngClass]="(isHandset$ | async) ? '' : 'bottom_toolbar_no_side'">
+<mat-toolbar class="bottom_toolbar p-0">
 
         <button [routerLink]="['/hjem']" [routerLinkActive]="['active-icon']"
         class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
