--- a/src/app/shared/components/confirm-delete-dialog/confirm-delete-dialog.component.html
+++ b/src/app/shared/components/confirm-delete-dialog/confirm-delete-dialog.component.html
@@ -1,12 +1,12 @@
 
-      <div style="width:70vw;height:20vh"  class="bg-5" fxLayout="column" fxLayoutAlign="center center" >
-        <div mat-dialog-content>
-          Bekreft at du ønsker å slette.
-        </div>
-        <div mat-dialog-actions>
+      <div fxLayout="column" class="form-container" fxLayoutAlign="center center" fxLayoutGap="16px">
+        <span class="text-center">
+          Bekreft at du ønsker å slette ressursen.
+        </span>
+        <span>
           <button mat-button (click)="onNoClick()">Avbryt</button>
           <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Slett</button>
-        </div>
+        </span>
       </div>
 
 
