--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -5,7 +5,7 @@
 
   <app-user-form-view
   [user]="user"
-  [roles]="roles"
+  [roles]="roles$ | async"
   (formSubmitted)="onSubmit($event)">
   </app-user-form-view>
 
