--- a/src/app/mission/mission-details/mission-details.component.html
+++ b/src/app/mission/mission-details/mission-details.component.html
@@ -1,7 +1,7 @@
 <app-main-nav
   [config]="mainNavConfig"
   (vertEvent)="handleVertEvent($event)"
-  (backEvent)="onBack()">
+  (back)="onBack()">
 
   <app-mission-details-view
     [mission]="mission"
