--- a/src/app/mission/mission-list/mission-list.component.html
+++ b/src/app/mission/mission-list/mission-list.component.html
@@ -1,7 +1,7 @@
 <app-main-nav
 [config]="mainNavConfig"
-(vertEvent)="this.handleVertEvent($event)"
-(searchEvent)="this.searchMissionList($event)">
+(vert)="this.handleVertEvent($event)"
+(search)="this.searchMissionList($event)">
 
   <div class="static-page-container" fxLayout="column" fxLayoutGap="8px">
 
