--- a/src/app/mission/mission-note-form/mission-note-form.component.html
+++ b/src/app/mission/mission-note-form/mission-note-form.component.html
@@ -1,6 +1,6 @@
 <app-main-nav
   [config]="mainNavConfig"
-  (backEvent)="onBack()">
+  (back)="onBack()">
 
 <app-mission-note-form-view
     [note]="note"
