--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -1,6 +1,6 @@
 <app-main-nav
   [config]="mainNavConfig"
-  (backEvent)="onBack()"
+  (back)="onBack()"
   (vertEvent)="handleVertEvent($event)">
 
   <app-user-form-view
