--- a/src/app/mission/mission-form/mission-form.component.html
+++ b/src/app/mission/mission-form/mission-form.component.html
@@ -1,6 +1,6 @@
 <app-main-nav
   [config]="mainNavConfig"
-  (backEvent)="onBack()">
+  (back)="onBack()">
 
 <app-mission-form-view
     [mission]="isCreateForm ? null : mission$ | async"
