--- a/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.scss
+++ b/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../variables';
+
 img{
     display: block;
     max-width:100vw;
@@ -7,19 +9,19 @@ img{
 
 .top_left_fab{
     position:absolute;
-    left:10px;
+    left:$content-margin * 1px;
 }
 
 .top_right_fab{
     position:absolute;
-    right:10px;
+    right:$content-margin * 1px;
 }
 
 .image_toolbar{
-    height:56px!important;
+    height:$bottom-nav-height!important;
     position: absolute;
     left:0px;
-    z-index:1;
+    z-index:2;
     overflow:hidden;
     background:transparent!important;
 }
