--- a/src/app/mission/mission-list/mission-list.component.html
+++ b/src/app/mission/mission-list/mission-list.component.html
@@ -1,6 +1,6 @@
 <app-main-nav
 [config]="mainNavConfig"
-(vert)="this.handleVertEvent($event)"
+(vertEvent)="this.handleVertEvent($event)"
 (search)="this.searchMissionList($event)">
 
   <div class="static-page-container" fxLayout="column" fxLayoutGap="8px">
