--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,15 @@
           <mat-icon mat-list-icon>view_list</mat-icon>
           <span mat-line>Oppdrag</span>
           <mat-icon>chevron_right</mat-icon>
+          <mat-divider class="mid-divider"></mat-divider>
         </mat-list-item>
+
+        <mat-list-item [routerLink]="['/timeliste']">
+          <mat-icon mat-list-icon>timer</mat-icon>
+          <span mat-line>Timeliste</span>
+          <mat-icon>chevron_right</mat-icon>
+        </mat-list-item>
+
     </mat-nav-list>
   </div>
 
