--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -4,6 +4,6 @@
     [disabled]="disabled || loading"
     [class.spinner]="loading">
     <mat-icon *ngIf="icon && !loading">{{ icon }}</mat-icon>
-    {{ loading ? '&nbsp;' : 'Lagre'}}
+    {{ loading ? '&nbsp;' : text }}
   </button>
 
